--- a/TBDML.ini
+++ b/TBDML.ini
@@ -10,7 +10,7 @@ Target=TBDML
 Layout=C_layout.hwl
 LoadDialogOptions=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main"
 CPU=HC12
-MainFrame=2,3,-1,-1,-1,-1,1191,1026,2151,1575
+MainFrame=0,1,-1,-1,-1,-1,570,80,1530,629
 TOOLBAR=57600 57601 32795 0 57635 57634 57637 0 57671 57669 0 32777 32776 32782 32780 32781 32778 0 32806
 AEFWarningDialog=FALSE
 
@@ -34,6 +34,8 @@ DBG_S12_3=DBG USER 0x0 0x0 0x0 0x0
 NV_PARAMETER_FILE=C:\Program Files (x86)\Freescale\CWS12v5.1\prog\FPP\mcu03E1.fpp
 NV_SAVE_WSP=0
 NV_AUTO_ID=1
+COMDEVICE=SETCOMM COMPORT LPT "TBDML #1"
+
 
 
 
